<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.liferpg.MainActivity"
    tools:ignore="MergeRootFrame,NestedWeights" >

    <LinearLayout
        android:id="@+id/TableOne"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <FrameLayout
            android:id="@+id/FrameHero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|center_horizontal"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/ImageHero"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:contentDescription="@string/descr_hero_photo"
                android:src="@drawable/photo" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/FrameAttr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/TableAttr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical|center_horizontal"
                android:orientation="horizontal"
                tools:ignore="UselessParent" >

                <LinearLayout
                    android:id="@+id/ListAttr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/attr_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attr_strength"
                        android:textSize="28sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/attr_agility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attr_agility"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/attr_intelligence"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attr_intelligence"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/attr_stamina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attr_stamina"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ListAttrValues"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/attr_strength_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/attr_agility_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/attr_intelligence_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/attr_stamina_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/TableTwo"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/FrameBars"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3" >

            <LinearLayout
                android:id="@+id/TableBars"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                tools:ignore="UselessParent" >

                <ProgressBar
                    android:id="@+id/barExp"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="38" />

                <ProgressBar
                    android:id="@+id/barMoral"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="10"
                    android:progress="10" />
            </LinearLayout>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/FrameAbil"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:padding="30dp" android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/ListAbil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/abil_logic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/abil_logic"
                        android:textSize="28sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/abil_health"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abil_health"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abil_body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abil_body"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abil_charisma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/abil_charisma"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ListAbilValues"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/abil_logic_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abil_health_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abil_body_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/abil_charisma_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/LinearLayout05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/test"
                        android:textSize="28sp"
                        tools:ignore="SpUsage" />

                    <TextView
                        android:id="@+id/TextView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/TextView15"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/TextView09"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test"
                        android:textSize="28sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/TextView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/TextView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/TextView16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nill"
                        android:textSize="28sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
